# doc/swagger.yaml
@@ -105,6 +105,29 @@ paths:
       summary: Supprime l'utilisateur connecté
       tags:
       - user
+    get:
+      description: Récupére les tasks crée par l'utilisateur authentifié via le token
+        dans le header
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Tâches récupérées avec succès
+          schema:
+            $ref: '#/definitions/doc.ResponseModel'
+        "401":
+          description: Invalide token
+          schema:
+            $ref: '#/definitions/doc.ResponseModel'
+        "500":
+          description: Erreur interne
+          schema:
+            $ref: '#/definitions/doc.ResponseModel'
+      security:
+      - BearerAuth: []
+      summary: Récupérer toutes les tasks de l'utilisateur connecté
+      tags:
+      - task
   /user/login:
     post:
       consumes:
